# NTIEM_AI_ASSISTANT

./: .gitignore  Dockerfile  README.md  acc_app.py  app_graph.py  app_reminder.py  book_app.py  chains.py  counselling_embedings.py  database.py  delete_app.py  edges.py  env.example  environment.yml  graph.py  image_creation.py  main.py  main_graph.py  main_graph_n_and_e.py  memory.db  models.py  nodes.py  p_and_c_embeddings.py  p_and_c_graph.py  polly_tests.py  prayer_embeddings.py  question_rewriters.py  question_router.py  read_app.py  run.py  settings.py  validator.py  watch_sermon.py
assemblyai_tests/: assemblyai_tests.py  assemblyai_tests2.py  assemblyai_tests3.py
church_documents/: apostle_uche_raymond.txt  faith_statement_of_ntiem.txt  meeting_schedules.txt  mission_of_ntiem.txt  vision_of_ntiem.txt
tests/: atlas_test.py  atlas_test2.py  counseleling_embeddings_test.py  echo_test.txt  endpoint_test.py  environment.yml  error_p_and_c_test2.py  intent_rec_test.py  lang_related_phrase.py  ntiem_bot_docs_creation.py  p_and_c_config.py  p_and_c_logic.py  prayer_embeddings_test.py  pyproject.toml  rag.py  rag_topics_test.py  requirements.txt  store_docs_in_db.py  together_ai_tests.py  trigger_word_chain_comp.py  trigger_word_chain_exp.txt  trigger_word_ref.py.py
tests/ntiem_bot_docs_files/: abilities2.txt
tests/old_validators/: former_prayer_validator.py
voices/: my_akachi_vn.aac
