[project]
name = "your_project_name"
version = "0.1.0"
description = "Your LangChain AI Project"
authors = ["Your Name <your.email@example.com>"]
dependencies = [
    python = ">=3.10.0,<3.13",
    langchain-openai = "^0.1.8",
    python-dotenv = "^1.0.1",
    langchain = "^0.2.1",
    langchain-community = "^0.2.1",
    langchain-anthropic = "^0.1.15",
    "pydantic",
    "numpy",
    "pandas",
    "unstructured",
    "scikit-learn",
    langchain-google-firestore = "^0.3.0",
    firestore = "^0.0.8",
    chromadb = "^0.5.0",
    tiktoken = "^0.7.0",
    sentence-transformers = "^3.0.0",
    bs4 = "^0.0.2",
    langchain-hub"= ^0.1.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default]
python = "3.13"
dependencies = [
    "pytest",
    "black",
    "ruff",  # Code formatting & linting
]

[tool.hatch.envs.dev]
dependencies = [
    "ipython",  # Interactive Python shell
]
